# mc_missile_guidance

./: .gitignore  .notes.autosave.xopp  Cargo.toml  Dockerfile  README.md  build.rs  notes.ipynb  notes.xopp
proto/: guidance.proto
src/: guidance.rs  lookup_tables.rs  main.rs
src/guidance/: helper.rs  program_coord_guidance.rs  stationary_entity_guidance.rs  straight_guidance.rs  straight_guidance_wo_gravity.rs
src/lookup_tables/: gravity_heading_data.rs
src/tests/: lookup_test.rs
