[package]
name = "mc_missile_guidance"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mc_missile_guidance"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
approx = "0.5.1"
async-stream = "0.3.6"
nalgebra = "0.33.2"
prost = "0.13.4"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = "0.1.17"
tonic = "0.12.3"
url = "2.5.4"

[build-dependencies]
tonic-build = "0.12.3"
